--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,11 +9,10 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin"
         >
 
@@ -21,9 +20,19 @@
             android:id="@+id/img_profile"
             android:layout_width="@dimen/profile_width"
             android:layout_height="@dimen/profile_height"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             app:srcCompat="@android:drawable/sym_def_app_icon"
             />
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/img_search"
+            android:layout_width="@dimen/ic_search_size"
+            android:layout_height="@dimen/ic_search_size"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_search"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
