--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,13 +24,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:padding="@dimen/dp_20"
         android:orientation="vertical"
         >
+
+        <ImageView
+            android:id="@+id/moviedbLogo"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_100"
+            android:layout_margin="@dimen/dp_20"
+            android:background="@drawable/movie_db_logo"
+            android:layout_centerHorizontal="true"
+            />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutUsername"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/moviedbLogo">
+
             <EditText
                 android:id="@+id/edtUsername"
                 android:layout_width="match_parent"
@@ -47,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layoutUsername">
+
             <EditText
                 android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
@@ -61,11 +74,22 @@
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dp_50"
             android:padding="@dimen/dp_10"
-            android:hint="@string/str_password"
+            android:hint="@string/str_login"
+            android:background="@color/colorWhite"
             android:layout_below="@+id/layoutPassword"
             />
 
+        <TextView
+            android:id="@+id/tvRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnLogin"
+            android:padding="@dimen/dp_10"
+            android:text="@string/str_register"
+            android:gravity="center"
+            android:textColor="@color/colorAccent"
+            />
     </RelativeLayout>
 </RelativeLayout>
