--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lnSearch"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/dp_10"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <LinearLayout
+        android:id="@+id/lnSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_search"
-        android:gravity="center"
-        android:padding="@dimen/dp_5"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_10"
         >
-        <ImageView
-            android:layout_width="@dimen/dp_15"
-            android:layout_height="@dimen/dp_15"
-            android:src="@drawable/ic_search"
-            />
-        <TextView
-            android:id="@+id/tvSearch"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_marginStart="@dimen/dp_5"
-            android:text="@string/nav_search"
-            android:textColor="@color/search_text_color"
-            android:textSize="@dimen/search_text_size"
-            />
+            android:background="@drawable/bg_search"
+            android:gravity="center"
+            android:onClick="onClickToInput"
+            android:padding="@dimen/dp_5"
+            >
+            <ImageView
+                android:layout_width="@dimen/dp_15"
+                android:layout_height="@dimen/dp_15"
+                android:src="@drawable/ic_search"
+                />
+            <TextView
+                android:id="@+id/tvSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_marginStart="@dimen/dp_5"
+                android:text="@string/nav_search"
+                android:textColor="@color/search_text_color"
+                android:textSize="@dimen/search_text_size"
+                />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
