--- a/app/src/main/res/layout/layout_search_result.xml
+++ b/app/src/main/res/layout/layout_search_result.xml
@@ -1,106 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lnViewResult"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/dp_10"
-        >
-
-        <RelativeLayout
-            android:id="@+id/rlSearch"
-            android:layout_width="@dimen/dp_0"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/bg_search"
-            >
-
-            <ImageView
-                android:id="@+id/imgIconSearch"
-                android:layout_width="@dimen/dp_15"
-                android:layout_height="@dimen/dp_15"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:layout_marginStart="@dimen/dp_10"
-                android:src="@drawable/ic_search"
-                />
-
-            <EditText
-                android:id="@+id/edtSearch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dp_20"
-                android:layout_marginLeft="@dimen/dp_30"
-                android:layout_marginRight="@dimen/dp_20"
-                android:layout_marginStart="@dimen/dp_30"
-                android:background="@null"
-                android:hint="@string/nav_search"
-                android:imeOptions="actionSearch"
-                android:maxLines="1"
-                android:padding="@dimen/sp_5"
-                android:textSize="@dimen/sp_14"
-                />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tvCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginStart="@dimen/dp_10"
-            android:text="@string/cancel"
-            android:textColor="@color/search_text_color"
-            android:textSize="@dimen/sp_15"
-            />
-
-    </LinearLayout>
-
-    <RelativeLayout
+        android:id="@+id/lnViewResult"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical"
         >
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/mRecyclerViewResult"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:divider="@null"
-            android:dividerHeight="@dimen/dp_0"
-            >
-
-        </android.support.v7.widget.RecyclerView>
-
         <LinearLayout
-            android:id="@+id/lnNoResult"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/dp_10"
             >
+
+            <RelativeLayout
+                android:id="@+id/rlSearch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg_search"
+                >
+
+                <ImageView
+                    android:id="@+id/imgIconSearch"
+                    android:layout_width="@dimen/dp_15"
+                    android:layout_height="@dimen/dp_15"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:src="@drawable/ic_search"
+                    />
+
+                <EditText
+                    android:id="@+id/edtSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_30"
+                    android:layout_marginRight="@dimen/dp_20"
+                    android:layout_marginStart="@dimen/dp_30"
+                    android:background="@null"
+                    android:imeOptions="actionSearch"
+                    android:maxLines="1"
+                    android:padding="@dimen/sp_5"
+                    android:textSize="@dimen/sp_14"
+                    />
+            </RelativeLayout>
 
             <TextView
+                android:id="@+id/tvRight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dp_5"
-                android:text="@string/no_data"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginStart="@dimen/dp_10"
+                android:onClick="onClickToSearch"
                 android:textColor="@color/search_text_color"
-                android:textSize="@dimen/search_text_size"
+                android:textSize="@dimen/sp_15"
                 />
+
         </LinearLayout>
-    </RelativeLayout>
-</LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <ProgressBar
+                android:id="@+id/pbHeaderProgress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:visibility="gone"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/mRecyclerViewResult"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/pbHeaderProgress"
+                android:scrollbars="vertical"
+                />
+
+            <LinearLayout
+                android:id="@+id/lnNoResult"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:text="@string/no_data"
+                    android:textColor="@color/search_text_color"
+                    android:textSize="@dimen/search_text_size"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</layout>
