--- a/app/src/main/res/layout/item_user_movies.xml
+++ b/app/src/main/res/layout/item_user_movies.xml
@@ -19,9 +19,10 @@
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_15"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -54,5 +55,13 @@
 
     </LinearLayout>
 
-
+    <TextView
+        android:id="@+id/tvUserRate"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:visibility="gone"
+        android:textStyle="bold"/>
 </LinearLayout>
