Change app flow. Enforce Login

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,27 +4,30 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_now_playing"
-            android:title="@string/nav_now_playing" />
+            android:title="@string/nav_now_playing"/>
         <item
             android:id="@+id/nav_popular"
-            android:title="@string/nav_popular" />
+            android:title="@string/nav_popular"/>
         <item
             android:id="@+id/nav_top_rated"
-            android:title="@string/nav_top_rated" />
+            android:title="@string/nav_top_rated"/>
         <item
             android:id="@+id/nav_upcoming"
-            android:title="@string/nav_upcoming" />
+            android:title="@string/nav_upcoming"/>
     </group>
 
     <item android:title="@string/personal">
         <menu>
             <item
                 android:id="@+id/nav_favo"
-                android:title="@string/nav_favo" />
+                android:title="@string/nav_favo"/>
             <item
                 android:id="@+id/nav_rate"
-                android:title="@string/nav_rate" />
+                android:title="@string/nav_rate"/>
         </menu>
     </item>
 
+    <item
+        android:id="@+id/nav_logout"
+        android:title="@string/nav_logout"/>
 </menu>
