--- a/app/src/main/res/layout/item_search_movie.xml
+++ b/app/src/main/res/layout/item_search_movie.xml
@@ -18,36 +18,35 @@
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dp_200"
             android:orientation="horizontal"
             >
             <ImageView
                 android:id="@+id/imgPoster"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dp_150"
+                android:layout_height="match_parent"
+                android:src="@drawable/default_movie"
                 />
             <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/dp_5"
-                android:paddingLeft="@dimen/dp_10"
-                android:paddingStart="@dimen/dp_10"
-                android:paddingRight="@dimen/dp_5"
                 android:paddingEnd="@dimen/dp_5"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_5"
+                android:paddingStart="@dimen/dp_10"
                 >
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     >
                     <TextView
                         android:id="@+id/tvTitle"
-                        android:layout_width="@dimen/dp_0"
+                        android:layout_width="@dimen/dp_150"
                         android:layout_height="wrap_content"
-                        android:layout_weight="10"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:textColor="@color/colorBlack"
@@ -55,14 +54,15 @@
                         />
                     <TextView
                         android:id="@+id/tvRate"
-                        android:layout_width="@dimen/dp_0"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
                         android:gravity="center"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/sp_12"
                         />
-                </LinearLayout>
+                </RelativeLayout>
                 <TextView
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
@@ -83,7 +83,5 @@
                     />
             </LinearLayout>
         </LinearLayout>
-        <!--Add cardview contents-->
-
     </RelativeLayout>
 </android.support.v7.widget.CardView>
