--- a/app/src/main/res/layout/layout_search_result.xml
+++ b/app/src/main/res/layout/layout_search_result.xml
@@ -66,6 +66,29 @@
                 />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_10"
+                android:text="@string/year"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/sp_15"
+                />
+            <Spinner
+                android:id="@+id/spinYear"
+                android:layout_width="@dimen/dp_100"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                />
+
+        </LinearLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
